--- a/app/src/main/res/layout/persons_fragment.xml
+++ b/app/src/main/res/layout/persons_fragment.xml
@@ -4,8 +4,12 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent"
         tools:context=".presentation.persons.PersonsFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
+    <include layout="@layout/full_progress_bar_content"/>
 </FrameLayout>
