--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -1,77 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="match_parent"
-        tools:context=".presentation.persons.PersonsFragment">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorTextBackground"
+    android:padding="@dimen/small_padding"
+    tools:context=".presentation.persons.PersonsFragment">
 
     <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintWidth_percent="50"
-            app:layout_constraintHeight_percent="50"/>
+        android:id="@+id/playerFragmentImageView"
+        android:layout_width="@dimen/person_image_player_size"
+        android:layout_height="@dimen/person_image_player_size"
+        android:contentDescription="@string/player_fragment_image_descr"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="50" />
 
-    <LinearLayout
+    <SeekBar
+        android:id="@+id/playerFragmentAudioSeekBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="@dimen/medium_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerFragmentImageView" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerFragmentAudioSeekBar">
+
+        <TextView
+            android:id="@+id/progressTextView"
+            android:layout_width="@dimen/player_fragment_time_code_width"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:maxLines="1"
+            android:text="@string/empty_time_code"
+            android:textSize="@dimen/big_title_text_size"
+            tools:text="00:01" />
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_alignParentStart="true"
-            android:background="@color/colorMediaPlayerBackground"
-            android:orientation="horizontal"
-            android:padding="0dp">
+            android:layout_toStartOf="@+id/maxProgressTextView"
+            android:layout_toLeftOf="@+id/maxProgressTextView"
+            android:layout_toEndOf="@+id/progressTextView"
+            android:layout_toRightOf="@+id/progressTextView">
 
-        <ImageButton
-                android:id="@+id/audioPlayImageButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@color/colorMediaPlayerButtonBackground"
-                android:src="@drawable/ic_baseline_play_white_24dp"/>
+            <Button
+                android:id="@+id/fragmentPlayerPlayButton"
+                android:layout_width="@dimen/notification_button_size"
+                android:layout_height="@dimen/notification_button_size"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/ic_play_circle_filled_black_48dp"
+                android:visibility="invisible" />
 
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <Button
+                android:id="@+id/fragmentPlayerPauseButton"
+                android:layout_width="@dimen/notification_button_size"
+                android:layout_height="@dimen/notification_button_size"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/ic_pause_circle_filled_black_48dp" />
+        </FrameLayout>
 
-            <SeekBar
-                    android:id="@+id/audioSeekBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/audioDurationTextView"
-                    android:layout_toStartOf="@+id/audioDurationTextView"/>
+        <TextView
+            android:id="@+id/maxProgressTextView"
+            android:layout_width="@dimen/player_fragment_time_code_width"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:gravity="end"
+            android:maxLines="1"
+            android:textSize="@dimen/big_title_text_size"
+            tools:text="45:23" />
 
-            <TextView
-                    android:id="@+id/audioDurationTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/cancelImageButton"
-                    android:layout_toStartOf="@+id/cancelImageButton"
-                    android:paddingRight="4dp"
-                    android:paddingEnd="4dp"
-                    android:textColor="@color/colorAccent"
-                    android:textStyle="italic"
-                    tools:text="00:00"/>
+    </RelativeLayout>
 
-            <ImageButton
-                    android:id="@+id/cancelImageButton"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:background="@color/colorMediaPlayerButtonBackground"
-                    tools:ignore="ContentDescription"/>
-
-        </RelativeLayout>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
