--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,16 +15,30 @@
 
     <!--Images-->
     <dimen name="vip_image_size">75dp</dimen>
+    <dimen name="person_image_player_size">250dp</dimen>
 
     <!--Margins-->
+    <dimen name="smaller_margin">4dp</dimen>
     <dimen name="small_margin">8dp</dimen>
+    <dimen name="medium_margin">16dp</dimen>
+
+    <!--Paddings-->
+    <dimen name="smaller_padding">4dp</dimen>
+    <dimen name="small_padding">8dp</dimen>
 
     <!--Text-->
-    <dimen name="title_text_size">16sp</dimen>
-    <dimen name="subtitle_text_size">14sp</dimen>
     <dimen name="regular_text_size">12sp</dimen>
+    <dimen name="subtitle_text_size">14sp</dimen>
+    <dimen name="title_text_size">16sp</dimen>
+    <dimen name="big_title_text_size">18sp</dimen>
 
+    <!--Player fragment-->
+    <dimen name="player_fragment_progress_bar_size">16dp</dimen>
+    <dimen name="player_fragment_time_code_width">100dp</dimen>
 
-    <dimen name="progress_bar_size">16sp</dimen>
+    <!--Notification-->
+    <dimen name="notification_button_size">48dp</dimen>
+    <dimen name="notification_time_code_size">96dp</dimen>
+
 
 </resources>
