--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <!--Margins-->
     <dimen name="smaller_margin">4dp</dimen>
     <dimen name="small_margin">8dp</dimen>
+    <dimen name="small_medium_margin">12dp</dimen>
     <dimen name="medium_margin">16dp</dimen>
 
     <!--Paddings-->
@@ -31,6 +32,7 @@
     <dimen name="subtitle_text_size">14sp</dimen>
     <dimen name="title_text_size">16sp</dimen>
     <dimen name="big_title_text_size">18sp</dimen>
+    <dimen name="biggest_title_text_size">24sp</dimen>
 
     <!--Player fragment-->
     <dimen name="player_fragment_progress_bar_size">16dp</dimen>
