--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -1,162 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:padding="4dp">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="visible">
+    <TextView
+        android:id="@+id/item_content_type_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/smaller_margin"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Интервью" />
 
-        <View
-                android:id="@+id/lineView"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"/>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/item_content_date_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/smaller_margin"
+        android:gravity="center"
+        android:maxLines="1"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_content_type_text_view"
+        tools:text="Особое мнение" />
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/item_content_short_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/smaller_margin"
+        android:layout_marginTop="@dimen/smaller_margin"
+        android:layout_marginEnd="@dimen/smaller_margin"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_content_date_text_view"
+        tools:text="Small Text" />
 
-        <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="2dp">
+    <ImageView
+        android:id="@+id/item_content_favorite_image_view"
+        style="@style/SmallIcon"
+        android:layout_marginStart="@dimen/smaller_margin"
+        android:layout_marginLeft="@dimen/smaller_margin"
+        android:layout_marginTop="@dimen/smaller_margin"
+        android:src="@drawable/ic_baseline_favorite_black_24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_content_short_text_view" />
 
-            <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+    <ImageButton
+        android:id="@+id/item_content_audio_play_image_button"
+        style="@style/SmallIcon"
+        android:layout_marginEnd="@dimen/smaller_margin"
+        android:layout_marginRight="@dimen/smaller_margin"
+        android:background="@color/colorPlayAudioButtonBackground"
+        android:src="@drawable/ic_baseline_play_white_24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/item_content_favorite_image_view" />
 
-                <ImageView
-                        android:id="@+id/item_content_image_view"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:scaleType="centerCrop"
-                        tools:ignore="ContentDescription"/>
-            </androidx.cardview.widget.CardView>
-        </FrameLayout>
+    <TextView
+        android:id="@+id/item_content_audio_duration_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/smaller_margin"
+        android:layout_marginRight="@dimen/smaller_margin"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="@id/item_content_favorite_image_view"
+        app:layout_constraintEnd_toStartOf="@id/item_content_audio_play_image_button"
+        app:layout_constraintTop_toTopOf="@id/item_content_favorite_image_view"
+        tools:text="01:23:34" />
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="50dp"
-                android:orientation="vertical">
+    <TextView
+        android:id="@+id/itemCastAudioTitleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/smaller_margin"
+        android:layout_marginRight="@dimen/smaller_margin"
+        android:text="@string/audio_label"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="@id/item_content_favorite_image_view"
+        app:layout_constraintEnd_toStartOf="@id/item_content_audio_duration_text_view"
+        app:layout_constraintTop_toTopOf="@id/item_content_favorite_image_view" />
 
-            <TextView
-                    android:id="@+id/item_content_type_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    tools:text="Интервью"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+    <View
+        android:id="@+id/lineView"
+        style="@style/HorizontalSeparator"
+        android:layout_marginTop="@dimen/smaller_margin"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_content_favorite_image_view" />
 
-            <TextView
-                    android:id="@+id/item_content_date_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    tools:text="Особое мнение"
-                    android:textAppearance="?android:attr/textAppearanceSmall"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="visible">
-
-        <TextView
-                android:id="@+id/item_content_short_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Small Text"
-                android:textAppearance="?android:attr/textAppearanceSmall"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical">
-
-                <ImageView
-                        android:id="@+id/item_content_favorite_image_view"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_favorite_black_24dp"/>
-            </androidx.cardview.widget.CardView>
-
-            <RelativeLayout
-                    android:id="@+id/item_content_audio_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="center_vertical"
-                        android:layout_toLeftOf="@+id/item_content_audio_duration_text_view"
-                        android:layout_toStartOf="@+id/item_content_audio_duration_text_view"
-                        android:paddingRight="4dp"
-                        android:paddingEnd="4dp"
-                        android:text="@string/audio_label"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textStyle="italic"/>
-
-                <TextView
-                        android:id="@+id/item_content_audio_duration_text_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="center_vertical"
-                        android:layout_toLeftOf="@+id/audioPlayCardView"
-                        android:layout_toStartOf="@+id/audioPlayCardView"
-                        android:paddingRight="4dp"
-                        android:paddingEnd="4dp"
-                        tools:text="01:23:34"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textStyle="italic"/>
-
-                <androidx.cardview.widget.CardView
-                        android:id="@+id/audioPlayCardView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true">
-
-                    <ImageButton
-                            android:id="@+id/item_content_audio_play_image_button"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:background="@color/colorPlayAudioButtonBackground"
-                            android:scaleType="centerInside"
-                            android:src="@drawable/ic_baseline_play_white_24dp"/>
-
-                </androidx.cardview.widget.CardView>
-
-            </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
