--- a/app/src/main/res/layout/full_progress_bar_content.xml
+++ b/app/src/main/res/layout/full_progress_bar_content.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="horizontal">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:progressBarStyle"
-            android:layout_width="match_parent"
+        android:id="@+id/progressBar"
+        style="?android:progressBarStyle"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/player_fragment_progress_bar_size"
-            android:layout_gravity="center"
-            android:visibility="gone"/>
+        tools:visibility="visible"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
-</LinearLayout>
+</FrameLayout>
