--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/mainMenuFav"
+        android:id="@+id/mainMenuItemFav"
         android:icon="@drawable/ic_favorite_border_black_24dp"
         android:title="@string/menu_fav"
         app:showAsAction="always" />
