--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -7,9 +7,9 @@
 
     <TextView
         android:id="@+id/personItemNameTextView"
-        android:layout_marginTop="@dimen/small_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small_margin"
         android:textSize="@dimen/title_text_size"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -30,8 +30,8 @@
         android:id="@+id/personItemCentralLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin"
         android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small_margin"
         android:layout_marginEnd="@dimen/small_margin"
         app:layout_constraintTop_toBottomOf="@+id/personItemProfessionTextView">
 
@@ -39,6 +39,8 @@
             android:id="@+id/personItemImageView"
             android:layout_width="@dimen/vip_image_size"
             android:layout_height="@dimen/vip_image_size"
+            android:importantForAccessibility="no"
+            android:transitionName="qqq"
             tools:ignore="ContentDescription" />
 
         <TextView
@@ -60,8 +62,8 @@
         android:id="@+id/iconsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin"
         android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small_margin"
         android:layout_marginEnd="@dimen/small_margin"
         android:orientation="horizontal"
         app:layout_constraintRight_toRightOf="parent"
