--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,8 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/mainMenuItemFav"
+        android:id="@+id/favMainMenuItem"
         android:icon="@drawable/ic_favorite_border_black_24dp"
         android:title="@string/menu_fav"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/debugPanelMainMenuItem"
+        android:icon="@drawable/ic_bug_report_white_24dp"
+        android:title="@string/menu_fav"
+        app:showAsAction="ifRoom" />
 </menu>
