--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -15,4 +15,8 @@
     </fragment>
     <fragment android:id="@+id/playerFragment" android:name="echomskfan.gmail.com.presentation.player.PlayerFragment"
               android:label="PlayerFragment"/>
+    <fragment
+        android:id="@+id/debugPanelFragment"
+        android:name="echomskfan.gmail.com.presentation.debugpanel.DebugPanelFragment"
+        android:label="DebugPanelFragment" />
 </navigation>
