--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,6 +7,9 @@
     <fragment android:id="@+id/personsFragment" android:name="echomskfan.gmail.com.presentation.persons.PersonsFragment"
               android:label="persons_fragment" tools:layout="@layout/fragment_recycler_view">
         <action android:id="@+id/action_personsFragment_to_castsFragment" app:destination="@id/castsFragment"/>
+        <action
+            android:id="@+id/action_personsFragment_to_personInfoFragment"
+            app:destination="@id/personInfoFragment" />
     </fragment>
     <fragment android:id="@+id/castsFragment" android:name="echomskfan.gmail.com.presentation.casts.CastsFragment"
               android:label="CastsFragment">
@@ -19,4 +22,8 @@
         android:id="@+id/debugPanelFragment"
         android:name="echomskfan.gmail.com.presentation.debugpanel.DebugPanelFragment"
         android:label="DebugPanelFragment" />
+    <fragment
+        android:id="@+id/personInfoFragment"
+        android:name="echomskfan.gmail.com.presentation.personinfo.PersonInfoFragment"
+        android:label="PersonInfoFragment" />
 </navigation>
