--- a/app/src/main/res/layout/fragment_person_info.xml
+++ b/app/src/main/res/layout/fragment_person_info.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/small_margin"
-        tools:text="Perofession" />
+        tools:text="Profession" />
 
     <ScrollView
         android:layout_width="match_parent"
