Fragment shared transitions. WIP.

--- a/app/src/main/res/layout/fragment_person_info.xml
+++ b/app/src/main/res/layout/fragment_person_info.xml
@@ -13,6 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
+        android:transitionName="imageView"
         android:layout_marginTop="@dimen/medium_margin" />
 
     <TextView
