--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -15,11 +15,7 @@
             app:popExitAnim="@android:anim/slide_out_right" />
         <action
             android:id="@+id/action_personsFragment_to_personInfoFragment"
-            app:destination="@id/personInfoFragment"
-            app:enterAnim="@anim/slide_in_right_anim"
-            app:exitAnim="@anim/slide_out_left_anim"
-            app:popEnterAnim="@android:anim/slide_in_left"
-            app:popExitAnim="@android:anim/slide_out_right" />
+            app:destination="@id/personInfoFragment" />
     </fragment>
     <fragment android:id="@+id/castsFragment" android:name="echomskfan.gmail.com.presentation.casts.CastsFragment"
               android:label="CastsFragment">
