--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -20,14 +20,23 @@
             app:exitAnim="@anim/slide_out_left_anim"
             app:popEnterAnim="@android:anim/slide_in_left"
             app:popExitAnim="@android:anim/slide_out_right" />
+        <action
+            android:id="@+id/action_personsFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment"
+            app:enterAnim="@anim/slide_in_right_anim"
+            app:exitAnim="@anim/slide_out_left_anim"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment android:id="@+id/castsFragment" android:name="echomskfan.gmail.com.presentation.casts.CastsFragment"
               android:label="CastsFragment">
         <argument android:name="personId" app:argType="integer"/>
         <action android:id="@+id/action_castsFragment_to_playerFragment" app:destination="@id/playerFragment"/>
     </fragment>
-    <fragment android:id="@+id/playerFragment" android:name="echomskfan.gmail.com.presentation.player.PlayerFragment"
-              android:label="PlayerFragment"/>
+    <fragment
+        android:id="@+id/playerFragment"
+        android:name="echomskfan.gmail.com.presentation.player.PlayerFragment"
+        android:label="PlayerFragment" />
     <fragment
         android:id="@+id/debugPanelFragment"
         android:name="echomskfan.gmail.com.presentation.debugpanel.DebugPanelFragment"
@@ -36,4 +45,8 @@
         android:id="@+id/personInfoFragment"
         android:name="echomskfan.gmail.com.presentation.personinfo.PersonInfoFragment"
         android:label="PersonInfoFragment" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="echomskfan.gmail.com.presentation.settings.SettingsFragment"
+        android:label="SettingsFragment" />
 </navigation>
