--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -91,7 +91,7 @@
             android:layout_toEndOf="@+id/progressTextView"
             android:layout_toRightOf="@+id/progressTextView">
 
-            <androidx.appcompat.widget.AppCompatButton
+            <echomskfan.gmail.com.widgetslib.NightModeAwareButton
                 android:id="@+id/fragmentPlayerPlayButton"
                 android:layout_width="@dimen/notification_button_size"
                 android:layout_height="@dimen/notification_button_size"
@@ -100,7 +100,7 @@
                 tools:visibility="gone"
                 android:visibility="invisible" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <echomskfan.gmail.com.widgetslib.NightModeAwareButton
                 android:id="@+id/fragmentPlayerPauseButton"
                 android:layout_width="@dimen/notification_button_size"
                 android:layout_height="@dimen/notification_button_size"
