--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,8 +14,9 @@
     <dimen name="nav_header_height">110dp</dimen>
 
     <!--Images-->
-    <dimen name="vip_image_size">75dp</dimen>
+    <dimen name="person_image_in_list_size">76dp</dimen>
     <dimen name="person_image_player_size">250dp</dimen>
+    <dimen name="person_info_image_size">98dp</dimen>
 
     <!--Margins-->
     <dimen name="smaller_margin">4dp</dimen>
